--- a/package.json
+++ b/package.json
@@ -5,35 +5,32 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build:css": "postcss src/index.css -o dist/output.css",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "build": "vite build"
-
+    "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
-    "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-    
   }
-  
 }
-
